--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+*{
+  font-family: 'Bebas Neue', cursive;
+}
+
+
 .App {
   text-align: center;
   background-image: url('./assets/fondo.png');
@@ -15,9 +20,6 @@ background-size: cover;
   height: 60vmin;
   pointer-events: none;
 }
-
-
-
 
 .App-link {
   color: black;
