--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -10,4 +10,18 @@
 
 ul > li {
     list-style: none;
+    padding: 0 30px;
+    
+}
+
+ul > li > a  {
+    text-decoration: none;
+    color: black;
+    font-size: 1.8rem;
+}
+ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-bottom: 0 !important;
 }
