--- a/src/css/ItemListContainer.css
+++ b/src/css/ItemListContainer.css
@@ -5,5 +5,13 @@
     color: white;
     padding: 1rem;
     border-radius: 20px;
-    margin: 1rem;
+    margin: 1rem auto;
+    width: 50%;
+    text-align: center;
+
+}
+
+.loader{
+   display: flex;
+   justify-content: center;
 }
