--- a/src/css/Item.css
+++ b/src/css/Item.css
@@ -1,3 +1,47 @@
 .contenedor-producto{
     width: 75%;
 }
+.contenedorBtn {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+}
+.btnComprar {
+    width: 100%;
+   text-align: center;
+    border-radius: 20px;
+    background-color: rgb(0, 0, 0, 0.7);
+    font-size: 20px;
+    color: white;
+    padding: 0 20px;
+
+}
+
+.link {
+    text-decoration: none;
+    color: black;
+}
+
+.link:hover {
+  text-decoration: none;
+  color: black;
+}
+
+.hover > img{
+    border-radius: 16px 16px 16px 16px;
+    
+  
+
+
+}
+
+.item-info-producto {
+    margin: 20px;
+    text-align: center;
+}
+
+.producto-info:hover{
+    border-radius: 16px 16px 16px 16px;
+    box-shadow: 5px 12px 45px -11px rgba(64,59,59,0.78);
+
+}
