--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -1,5 +1,7 @@
 .imgItem {
-    width: 5%;
+    width: 80px;
+    height: 100px;
+    align-self: center;
 
    
     margin: 20px;
@@ -7,8 +9,12 @@
 
 .btnVaciar {
     padding: 0 1rem;
+    margin: 1rem;
 }
-
+.btnContinue{
+    padding: 0 1rem;
+    margin: 1rem;
+}
 .btnBorrar {
     height: 7vh;
     padding: 0 1rem;
@@ -17,6 +23,15 @@
 
 .titleItem {
     
-    padding: 2rem;
+    padding: 0.5rem;
     align-self: center;
+}
+
+.contenedorResumen {
+   
+    width: 100%;
+    margin: 1rem;
+    border-radius: 30px;
+    box-shadow: -2px 1px 72px -21px rgba(0,0,0,0.68);
+    border: 2px solid black;
 }
