--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -21,6 +21,13 @@
     align-self: center;
 }
 
+.btnConfirmar {
+ 
+    padding: 0 1rem;
+    margin: 1rem;
+    align-self: center;
+}
+
 .titleItem {
     
     padding: 0.5rem;
