--- a/src/css/Item.css
+++ b/src/css/Item.css
@@ -1,5 +1,6 @@
 .contenedor-producto{
     width: 75%;
+   
 }
 .contenedorBtn {
     display: flex;
@@ -10,7 +11,7 @@
     width: 100%;
    text-align: center;
     border-radius: 20px;
-    background-color: rgb(0, 0, 0, 0.7);
+    background: rgb(0, 0, 0);
     font-size: 20px;
     color: white;
     padding: 0 20px;
@@ -25,23 +26,35 @@
 .link:hover {
   text-decoration: none;
   color: black;
+ 
 }
 
-.hover > img{
-    border-radius: 16px 16px 16px 16px;
-    
-  
 
-
-}
 
 .item-info-producto {
-    margin: 20px;
+    
     text-align: center;
 }
 
 .producto-info:hover{
     border-radius: 16px 16px 16px 16px;
     box-shadow: 5px 12px 45px -11px rgba(64,59,59,0.78);
+    transition: all 0.2s ease;
 
+}
+
+.precioLista {
+    color: red;
+}
+
+.precioFinal{
+    font-size: 20px;
+}
+
+.borderR {
+    border-radius: 40px;
+}
+
+.cuotas {
+    font-size: 30px;
 }
