--- a/src/css/ItemDetail.css
+++ b/src/css/ItemDetail.css
@@ -1,7 +1,7 @@
 .contenedor-padre{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content:space-between;
     align-content: center;
     margin: 100px 0;
 }
@@ -12,12 +12,38 @@ align-self: center;
 }
 
 .titulo {
-    font-size: 50px;
+    font-size: 20px;
+    color: black;
 }
 .description{
     font-size: 25px;
 }
 
 .precio{
-    font-size: 30px;
+    font-size: 20px;
 }
+
+.imgDetail {
+    width: 75%;
+    justify-self: center;
+    border-radius: 50px;
+}
+
+.contenedor-imagen {
+    display: flex;
+    justify-content: center;
+}
+
+.precioFinalDetail{
+    font-size: 20px;
+}
+
+.precioListaDetail {
+    font-size: 15px;
+    color: red;
+}
+
+.cuotasDetail {
+    font-size: 35px;
+}
+
